[gd_scene load_steps=43 format=3 uid="uid://b46qb74feih7m"]

[ext_resource type="Script" path="res://Script/crowd_simulation.gd" id="1_hyuob"]
[ext_resource type="FontFile" uid="uid://bu5hdtbp88ojw" path="res://Fonts/EXEPixelPerfect.ttf" id="3_gjq7j"]
[ext_resource type="Texture2D" uid="uid://deqsdtpq6bt6s" path="res://Assets/YCSTA_UIboxes-1.png" id="3_rhqmm"]
[ext_resource type="Texture2D" uid="uid://dlws0qyse6xe4" path="res://Assets/arrowshadow.png" id="4_h7cj8"]
[ext_resource type="Texture2D" uid="uid://siyq5k5htydp" path="res://Assets/UpgradeIcons.png" id="4_w0fu6"]
[ext_resource type="Texture2D" uid="uid://digsb5q5shm5s" path="res://Assets/blacktile28.png" id="5_be4lt"]
[ext_resource type="Texture2D" uid="uid://c3xvjkeusvj11" path="res://Assets/placeholderlvlbar-2.png" id="6_tn3wl"]
[ext_resource type="Texture2D" uid="uid://cuh6tn3srfoe8" path="res://Assets/placeholderlvlbar-1.png" id="7_hj0fj"]
[ext_resource type="FontFile" uid="uid://b85f1e3h4hl2q" path="res://Fonts/Retro Gaming.ttf" id="8_wwr2p"]
[ext_resource type="Script" path="res://Script/SelectLevelupscreen.gd" id="9_v754b"]
[ext_resource type="Texture2D" uid="uid://bc65frbmttbad" path="res://Assets/Selectcardarrow.png" id="11_41qpt"]
[ext_resource type="Texture2D" uid="uid://cg180gfaancl0" path="res://Assets/Buttonshowcase.png" id="11_g741n"]
[ext_resource type="Texture2D" uid="uid://cgakxi0t1lwe7" path="res://Assets/Staticons.png" id="11_q0y8a"]
[ext_resource type="Texture2D" uid="uid://dsh5841pjc8i5" path="res://Assets/YCSTA_Souldparticles.png" id="13_nqnof"]
[ext_resource type="Texture2D" uid="uid://c02rr86yd8vae" path="res://Assets/YCSTA_Arrow (new).png" id="14_7qeql"]
[ext_resource type="AudioStream" uid="uid://bad6nr05h2axn" path="res://Sounds/lvlup1.wav" id="16_nlck6"]
[ext_resource type="Texture2D" uid="uid://clio7b0ifxo4" path="res://Assets/Aimicon.png" id="17_qerbj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j74bb"]
atlas = ExtResource("11_g741n")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g64dw"]
atlas = ExtResource("11_g741n")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm4gb"]
atlas = ExtResource("11_g741n")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3r4j"]
atlas = ExtResource("11_g741n")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v688"]
atlas = ExtResource("11_g741n")
region = Rect2(0, 64, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pd6dk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j74bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g64dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm4gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3r4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v688")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_yqass"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kxa56"]
resource_name = "play"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v57cf"]
_data = {
"RESET": SubResource("Animation_yqass"),
"play": SubResource("Animation_kxa56")
}

[sub_resource type="Gradient" id="Gradient_bue6w"]
offsets = PackedFloat32Array(0, 0.486667, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_ge54m"]
offsets = PackedFloat32Array(0, 0.313333, 0.686667, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.431865, 1, 0.400656, 1, 0.431373, 1, 0.858824, 1, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_rcns4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xxqfg"]
resource_name = "arrow1"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_wnrt4"]
resource_name = "arrow2"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_6moog"]
resource_name = "arrow3"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 16]
}

[sub_resource type="Animation" id="Animation_wwsdf"]
resource_name = "arrow4"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_2vwwc"]
resource_name = "arrow5"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_i61v4"]
resource_name = "arrow6"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_g0hxw"]
resource_name = "arrow7"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 49, 48, 49, 50, 51, 52, 53, 54, 53, 52, 53, 54, 53, 52, 51]
}

[sub_resource type="Animation" id="Animation_d6utp"]
resource_name = "arrow8"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59, 60, 61, 62, 61, 60, 59, 58, 57, 56, 55]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgkm7"]
_data = {
"RESET": SubResource("Animation_rcns4"),
"arrow1": SubResource("Animation_xxqfg"),
"arrow2": SubResource("Animation_wnrt4"),
"arrow3": SubResource("Animation_6moog"),
"arrow4": SubResource("Animation_wwsdf"),
"arrow5": SubResource("Animation_2vwwc"),
"arrow6": SubResource("Animation_i61v4"),
"arrow7": SubResource("Animation_g0hxw"),
"arrow8": SubResource("Animation_d6utp")
}

[sub_resource type="Animation" id="Animation_fjtyg"]
resource_name = "rotate"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fw1fp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vl61u"]
resource_name = "aim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.6, 1.6), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"lock_in"
}, {
"args": [],
"method": &"playrotate"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.964706, 0.431373, 0.396078, 0), Color(0.768627, 0.188235, 0.188235, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pib35"]
_data = {
"RESET": SubResource("Animation_fw1fp"),
"aim": SubResource("Animation_vl61u"),
"rotate": SubResource("Animation_fjtyg")
}

[node name="Crowd_Simulation" type="CharacterBody2D" groups=["crowd_p"]]
z_index = 20
texture_filter = 1
script = ExtResource("1_hyuob")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Box01" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(269, 17)
texture = ExtResource("3_rhqmm")

[node name="UpgradeIcons" type="Sprite2D" parent="UI/Box01"]
texture_filter = 1
texture = ExtResource("4_w0fu6")
hframes = 4
vframes = 4
frame = 15

[node name="CDB" type="TextureProgressBar" parent="UI/Box01"]
modulate = Color(1, 1, 1, 0.501961)
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("5_be4lt")

[node name="Box02" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(302, 17)
texture = ExtResource("3_rhqmm")

[node name="UpgradeIcons" type="Sprite2D" parent="UI/Box02"]
texture_filter = 1
texture = ExtResource("4_w0fu6")
hframes = 4
vframes = 4
frame = 15

[node name="CDB" type="TextureProgressBar" parent="UI/Box02"]
modulate = Color(1, 1, 1, 0.501961)
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("5_be4lt")

[node name="Box03" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(269, 48)
texture = ExtResource("3_rhqmm")

[node name="UpgradeIcons" type="Sprite2D" parent="UI/Box03"]
texture_filter = 1
texture = ExtResource("4_w0fu6")
hframes = 4
vframes = 4
frame = 15

[node name="CDB" type="TextureProgressBar" parent="UI/Box03"]
modulate = Color(1, 1, 1, 0.501961)
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("5_be4lt")

[node name="Box04" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(302, 48)
texture = ExtResource("3_rhqmm")

[node name="UpgradeIcons" type="Sprite2D" parent="UI/Box04"]
texture_filter = 1
texture = ExtResource("4_w0fu6")
hframes = 4
vframes = 4
frame = 15

[node name="CDB" type="TextureProgressBar" parent="UI/Box04"]
modulate = Color(1, 1, 1, 0.501961)
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("5_be4lt")

[node name="Activateletter01" type="Label" parent="UI"]
texture_filter = 1
offset_left = 256.0
offset_top = 24.0
offset_right = 282.0
offset_bottom = 37.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "G"
horizontal_alignment = 1

[node name="Activateletter02" type="Label" parent="UI"]
texture_filter = 1
offset_left = 289.0
offset_top = 24.0
offset_right = 315.0
offset_bottom = 37.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "H"
horizontal_alignment = 1

[node name="Activateletter03" type="Label" parent="UI"]
texture_filter = 1
offset_left = 256.0
offset_top = 55.0
offset_right = 282.0
offset_bottom = 68.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "V"
horizontal_alignment = 1

[node name="Activateletter04" type="Label" parent="UI"]
texture_filter = 1
offset_left = 289.0
offset_top = 55.0
offset_right = 315.0
offset_bottom = 68.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "B"
horizontal_alignment = 1

[node name="Staticons" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(8, 39)
texture = ExtResource("11_q0y8a")

[node name="Text_ATKlvl" type="Label" parent="UI"]
texture_filter = 1
offset_left = 17.0
offset_top = 12.0
offset_right = 160.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "5"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Text_SPDlvl" type="Label" parent="UI"]
texture_filter = 1
offset_left = 17.0
offset_top = 22.0
offset_right = 160.0
offset_bottom = 35.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "30"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Text_CDNlvl" type="Label" parent="UI"]
texture_filter = 1
offset_left = 17.0
offset_top = 32.0
offset_right = 160.0
offset_bottom = 45.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Text_AMTlvl" type="Label" parent="UI"]
texture_filter = 1
offset_left = 17.0
offset_top = 42.0
offset_right = 160.0
offset_bottom = 55.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Text_HPlvl" type="Label" parent="UI"]
texture_filter = 1
offset_left = 17.0
offset_top = 52.0
offset_right = 160.0
offset_bottom = 65.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "10"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LVLbar" type="TextureProgressBar" parent="UI"]
offset_left = 60.0
offset_top = 168.0
offset_right = 260.0
offset_bottom = 174.0
max_value = 5.0
texture_under = ExtResource("6_tn3wl")
texture_progress = ExtResource("7_hj0fj")

[node name="LVLtext" type="Label" parent="UI"]
texture_filter = 1
offset_left = 60.0
offset_top = 159.0
offset_right = 260.0
offset_bottom = 172.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "Level 1"
horizontal_alignment = 1

[node name="SelectLevelupscreen" type="Node2D" parent="UI"]
process_mode = 3
visible = false
script = ExtResource("9_v754b")

[node name="Blackrect" type="ColorRect" parent="UI/SelectLevelupscreen"]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 0.392157)

[node name="buttonstopress" type="AnimatedSprite2D" parent="UI/SelectLevelupscreen/Blackrect"]
texture_filter = 1
position = Vector2(284, 154)
sprite_frames = SubResource("SpriteFrames_pd6dk")
frame_progress = 0.811403

[node name="Text1" type="Label" parent="UI/SelectLevelupscreen"]
texture_filter = 1
offset_top = 4.0
offset_right = 320.0
offset_bottom = 32.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_wwr2p")
theme_override_font_sizes/font_size = 22
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="CardArrow" type="Sprite2D" parent="UI/SelectLevelupscreen"]
z_index = 1
texture_filter = 1
position = Vector2(90, 144)
texture = ExtResource("11_41qpt")
hframes = 2
vframes = 2

[node name="Anim" type="AnimationPlayer" parent="UI/SelectLevelupscreen/CardArrow"]
libraries = {
"": SubResource("AnimationLibrary_v57cf")
}

[node name="UnpauseTimer" type="Timer" parent="UI/SelectLevelupscreen"]
wait_time = 1.2
one_shot = true

[node name="CanpressTimer" type="Timer" parent="UI/SelectLevelupscreen"]
wait_time = 0.4
one_shot = true

[node name="Tut" type="Label" parent="UI/SelectLevelupscreen"]
texture_filter = 1
offset_left = 4.0
offset_top = 147.0
offset_right = 257.0
offset_bottom = 160.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "Press with the button you want to assign it to"
horizontal_alignment = 1

[node name="Confetti" type="CPUParticles2D" parent="UI/SelectLevelupscreen"]
texture_filter = 1
position = Vector2(160, 188)
emitting = false
amount = 16
one_shot = true
explosiveness = 0.9
texture = ExtResource("13_nqnof")
emission_shape = 3
emission_rect_extents = Vector2(160, 8)
direction = Vector2(0, -1)
spread = 15.0
gravity = Vector2(0, -98)
initial_velocity_min = 100.0
initial_velocity_max = 160.0
scale_amount_max = 1.4
color_ramp = SubResource("Gradient_bue6w")
color_initial_ramp = SubResource("Gradient_ge54m")

[node name="Deathscreen" type="Node2D" parent="UI"]
visible = false

[node name="ColorRect" type="ColorRect" parent="UI/Deathscreen"]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 0.501961)

[node name="Gameover" type="Label" parent="UI/Deathscreen"]
modulate = Color(1, 0.529412, 0.443137, 1)
texture_filter = 1
offset_top = 51.0
offset_right = 320.0
offset_bottom = 79.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_wwr2p")
theme_override_font_sizes/font_size = 22
text = "GAME OVER"
horizontal_alignment = 1

[node name="Score" type="Label" parent="UI/Deathscreen"]
texture_filter = 1
offset_top = 105.0
offset_right = 320.0
offset_bottom = 118.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "Score: 0"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="UI/Deathscreen"]
texture_filter = 1
offset_top = 83.0
offset_right = 320.0
offset_bottom = 96.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "All your meeblings have died"
horizontal_alignment = 1

[node name="EnemiesAliveUI" type="Label" parent="UI"]
visible = false
texture_filter = 1
anchors_preset = -1
anchor_left = 1.375
anchor_top = 11.8462
anchor_right = 1.375
anchor_bottom = 11.8462
offset_left = -351.0
offset_top = -1978.31
offset_right = -311.0
offset_bottom = -1965.31
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GameTimerUI" type="Label" parent="UI"]
texture_filter = 1
offset_left = 4.0
offset_right = 44.0
offset_bottom = 13.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_gjq7j")
text = "0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Mainarrow" type="Sprite2D" parent="."]
z_index = 5
texture_filter = 1
position = Vector2(0, -14)
texture = ExtResource("14_7qeql")
hframes = 8
vframes = 8

[node name="Anim" type="AnimationPlayer" parent="Mainarrow"]
libraries = {
"": SubResource("AnimationLibrary_dgkm7")
}

[node name="Arrowshadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
z_index = -19
texture_filter = 1
texture = ExtResource("4_h7cj8")

[node name="LVLup" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("16_nlck6")
volume_db = 10.0

[node name="Timers" type="Node" parent="."]

[node name="MenuTimer" type="Timer" parent="Timers"]
wait_time = 6.0
one_shot = true

[node name="AimRing" type="Node2D" parent="." groups=["priorityaim"]]
scale = Vector2(1, 0.75)

[node name="Sprite" type="Sprite2D" parent="AimRing"]
texture = ExtResource("17_qerbj")

[node name="Anim" type="AnimationPlayer" parent="AimRing/Sprite"]
libraries = {
"": SubResource("AnimationLibrary_pib35")
}

[connection signal="timeout" from="UI/SelectLevelupscreen/UnpauseTimer" to="UI/SelectLevelupscreen" method="_on_unpause_timer_timeout"]
[connection signal="timeout" from="UI/SelectLevelupscreen/CanpressTimer" to="UI/SelectLevelupscreen" method="_on_canpress_timer_timeout"]
[connection signal="timeout" from="Timers/MenuTimer" to="." method="_on_menu_timer_timeout"]
